Issue 5: O texto da table na pág. Comprar foi centralizado usando o text-align: center no seletor table td{}

--- a/modulo1/css-bugfixes/bugfixes/index.css
+++ b/modulo1/css-bugfixes/bugfixes/index.css
@@ -117,6 +117,10 @@ td button {
     color: black;
 }
 
+table td {
+    text-align: center;
+}
+
 .container-do-search {
     margin-top: 20px;
     height: 100px;
